TextualPart/leto/letoParser.js
// Generated from leto.g4 by ANTLR 4.9
// jshint ignore: start
import antlr4 from 'antlr4';
import letoListener from './letoListener.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class letoParser extends antlr4.Parser {

    static grammarFileName = "leto.g4";
    static literalNames = [ null, "'componant'", "':'", "'->'", "';'", "'asset'", 
                            "'is_a'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, "COMPONANT", 
                             "ID", "STRINGLITERAL", "LETTRE", "NUMBER", 
                             "FLOAT", "COMMENT", "EOL", "WS" ];
    static ruleNames = [ "prog", "instruction", "definition", "instantiation", 
                         "node_type", "relationship_type", "node", "relationship", 
                         "number", "comment", "id", "componant" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = letoParser.ruleNames;
        this.literalNames = letoParser.literalNames;
        this.symbolicNames = letoParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	prog() {
	    let localctx = new ProgContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, letoParser.RULE_prog);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 28; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 25;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << letoParser.T__0) | (1 << letoParser.T__4) | (1 << letoParser.COMMENT))) !== 0)) {
	                this.state = 24;
	                this.instruction();
	            }

	            this.state = 27;
	            this.match(letoParser.EOL);
	            this.state = 30; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << letoParser.T__0) | (1 << letoParser.T__4) | (1 << letoParser.COMMENT) | (1 << letoParser.EOL))) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	instruction() {
	    let localctx = new InstructionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, letoParser.RULE_instruction);
	    try {
	        this.state = 34;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 32;
	            this.definition();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 33;
	            this.instantiation();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	definition() {
	    let localctx = new DefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, letoParser.RULE_definition);
	    var _la = 0; // Token type
	    try {
	        this.state = 46;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case letoParser.T__0:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 38; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 38;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	                switch(la_) {
	                case 1:
	                    this.state = 36;
	                    this.node_type();
	                    break;

	                case 2:
	                    this.state = 37;
	                    this.relationship_type();
	                    break;

	                }
	                this.state = 40; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while(_la===letoParser.T__0);
	            this.state = 43;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===letoParser.COMMENT) {
	                this.state = 42;
	                this.comment();
	            }

	            break;
	        case letoParser.COMMENT:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 45;
	            this.comment();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	instantiation() {
	    let localctx = new InstantiationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, letoParser.RULE_instantiation);
	    var _la = 0; // Token type
	    try {
	        this.state = 58;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case letoParser.T__4:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 50; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 50;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	                switch(la_) {
	                case 1:
	                    this.state = 48;
	                    this.node();
	                    break;

	                case 2:
	                    this.state = 49;
	                    this.relationship();
	                    break;

	                }
	                this.state = 52; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while(_la===letoParser.T__4);
	            this.state = 55;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===letoParser.COMMENT) {
	                this.state = 54;
	                this.comment();
	            }

	            break;
	        case letoParser.COMMENT:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 57;
	            this.comment();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	node_type() {
	    let localctx = new Node_typeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, letoParser.RULE_node_type);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 60;
	        this.match(letoParser.T__0);
	        this.state = 61;
	        this.id();
	        this.state = 64;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===letoParser.T__1 || _la===letoParser.T__2) {
	            this.state = 62;
	            _la = this._input.LA(1);
	            if(!(_la===letoParser.T__1 || _la===letoParser.T__2)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 63;
	            this.id();
	        }

	        this.state = 66;
	        this.match(letoParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	relationship_type() {
	    let localctx = new Relationship_typeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, letoParser.RULE_relationship_type);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 68;
	        this.match(letoParser.T__0);
	        this.state = 69;
	        this.id();
	        this.state = 72;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===letoParser.T__1 || _la===letoParser.T__2) {
	            this.state = 70;
	            _la = this._input.LA(1);
	            if(!(_la===letoParser.T__1 || _la===letoParser.T__2)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 71;
	            this.id();
	        }

	        this.state = 74;
	        this.match(letoParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	node() {
	    let localctx = new NodeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, letoParser.RULE_node);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 76;
	        this.match(letoParser.T__4);
	        this.state = 77;
	        this.id();
	        this.state = 78;
	        this.match(letoParser.T__5);
	        this.state = 79;
	        this.componant();
	        this.state = 80;
	        this.match(letoParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	relationship() {
	    let localctx = new RelationshipContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, letoParser.RULE_relationship);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 82;
	        this.match(letoParser.T__4);
	        this.state = 83;
	        this.id();
	        this.state = 84;
	        this.match(letoParser.T__5);
	        this.state = 85;
	        this.componant();
	        this.state = 86;
	        this.match(letoParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	number() {
	    let localctx = new NumberContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, letoParser.RULE_number);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 88;
	        this.match(letoParser.NUMBER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	comment() {
	    let localctx = new CommentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, letoParser.RULE_comment);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 90;
	        this.match(letoParser.COMMENT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	id() {
	    let localctx = new IdContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, letoParser.RULE_id);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 92;
	        this.match(letoParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	componant() {
	    let localctx = new ComponantContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, letoParser.RULE_componant);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 94;
	        this.match(letoParser.COMPONANT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

letoParser.EOF = antlr4.Token.EOF;
letoParser.T__0 = 1;
letoParser.T__1 = 2;
letoParser.T__2 = 3;
letoParser.T__3 = 4;
letoParser.T__4 = 5;
letoParser.T__5 = 6;
letoParser.COMPONANT = 7;
letoParser.ID = 8;
letoParser.STRINGLITERAL = 9;
letoParser.LETTRE = 10;
letoParser.NUMBER = 11;
letoParser.FLOAT = 12;
letoParser.COMMENT = 13;
letoParser.EOL = 14;
letoParser.WS = 15;

letoParser.RULE_prog = 0;
letoParser.RULE_instruction = 1;
letoParser.RULE_definition = 2;
letoParser.RULE_instantiation = 3;
letoParser.RULE_node_type = 4;
letoParser.RULE_relationship_type = 5;
letoParser.RULE_node = 6;
letoParser.RULE_relationship = 7;
letoParser.RULE_number = 8;
letoParser.RULE_comment = 9;
letoParser.RULE_id = 10;
letoParser.RULE_componant = 11;

class ProgContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_prog;
    }

	EOL = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(letoParser.EOL);
	    } else {
	        return this.getToken(letoParser.EOL, i);
	    }
	};


	instruction = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(InstructionContext);
	    } else {
	        return this.getTypedRuleContext(InstructionContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterProg(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitProg(this);
		}
	}


}



class InstructionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_instruction;
    }

	definition() {
	    return this.getTypedRuleContext(DefinitionContext,0);
	};

	instantiation() {
	    return this.getTypedRuleContext(InstantiationContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterInstruction(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitInstruction(this);
		}
	}


}



class DefinitionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_definition;
    }

	node_type = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(Node_typeContext);
	    } else {
	        return this.getTypedRuleContext(Node_typeContext,i);
	    }
	};

	relationship_type = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(Relationship_typeContext);
	    } else {
	        return this.getTypedRuleContext(Relationship_typeContext,i);
	    }
	};

	comment() {
	    return this.getTypedRuleContext(CommentContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterDefinition(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitDefinition(this);
		}
	}


}



class InstantiationContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_instantiation;
    }

	node = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(NodeContext);
	    } else {
	        return this.getTypedRuleContext(NodeContext,i);
	    }
	};

	relationship = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(RelationshipContext);
	    } else {
	        return this.getTypedRuleContext(RelationshipContext,i);
	    }
	};

	comment() {
	    return this.getTypedRuleContext(CommentContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterInstantiation(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitInstantiation(this);
		}
	}


}



class Node_typeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_node_type;
    }

	id = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(IdContext);
	    } else {
	        return this.getTypedRuleContext(IdContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterNode_type(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitNode_type(this);
		}
	}


}



class Relationship_typeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_relationship_type;
    }

	id = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(IdContext);
	    } else {
	        return this.getTypedRuleContext(IdContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterRelationship_type(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitRelationship_type(this);
		}
	}


}



class NodeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_node;
    }

	id() {
	    return this.getTypedRuleContext(IdContext,0);
	};

	componant() {
	    return this.getTypedRuleContext(ComponantContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterNode(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitNode(this);
		}
	}


}



class RelationshipContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_relationship;
    }

	id() {
	    return this.getTypedRuleContext(IdContext,0);
	};

	componant() {
	    return this.getTypedRuleContext(ComponantContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterRelationship(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitRelationship(this);
		}
	}


}



class NumberContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_number;
    }

	NUMBER() {
	    return this.getToken(letoParser.NUMBER, 0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterNumber(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitNumber(this);
		}
	}


}



class CommentContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_comment;
    }

	COMMENT() {
	    return this.getToken(letoParser.COMMENT, 0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterComment(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitComment(this);
		}
	}


}



class IdContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_id;
    }

	ID() {
	    return this.getToken(letoParser.ID, 0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterId(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitId(this);
		}
	}


}



class ComponantContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = letoParser.RULE_componant;
    }

	COMPONANT() {
	    return this.getToken(letoParser.COMPONANT, 0);
	};

	enterRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.enterComponant(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof letoListener ) {
	        listener.exitComponant(this);
		}
	}


}




letoParser.ProgContext = ProgContext; 
letoParser.InstructionContext = InstructionContext; 
letoParser.DefinitionContext = DefinitionContext; 
letoParser.InstantiationContext = InstantiationContext; 
letoParser.Node_typeContext = Node_typeContext; 
letoParser.Relationship_typeContext = Relationship_typeContext; 
letoParser.NodeContext = NodeContext; 
letoParser.RelationshipContext = RelationshipContext; 
letoParser.NumberContext = NumberContext; 
letoParser.CommentContext = CommentContext; 
letoParser.IdContext = IdContext; 
letoParser.ComponantContext = ComponantContext; 
